[tool.poetry]
name = "dynamic-mm-interest"
version = "0.1.0"
description = "dynamic interest rate for a money market"
authors = ["mootz12 <mootz12@pm.me>"]
license = "gpl-3.0"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.pylint]
max-line-length = 120
